fix h1 on mobile

--- a/src/app/main-block/main-block.component.scss
+++ b/src/app/main-block/main-block.component.scss
@@ -253,6 +253,7 @@
           font-size: 40px;
           position: absolute;
           bottom: 140px;
+          width: 250px;
           line-height: 120%;
         }
         .h2 {
